# micro

./: .cursorindexingignore  .cursorrules  .gitattributes  .gitignore  .gitrecover  0001-prod-test-14.05-fix-css-dark-modes-external-systems-.patch  README.md  TODO.md  TODONE.md  allocationDAta.json  check_duplicate_projects.py  check_filesystem_integrity.py  check_project_documents.py  currentState.json  filesystem_check_explanation.md  film_allocation.sqlite3  final_data.json  frontend_data.json  hosts  initial_data.json  initial_index.json  merged.json  micro.lnk  my_changes.patch  results1.csv  roll_optimizer.py  run_micro.bat  run_micro.py  run_micro.spec  sma_toggle.py  temp_debug.py  test_django_sma_changes.py  todo  todo_checker.py  updated_index.json
.data/: allocationData.json  indexData.json  localStorage_migration_plan.md  microfilmAllocationData copy.json  microfilmAllocationData.json  microfilmAnalysisData.json  microfilmDistributionResults.json  microfilmFilmNumberResults.json  microfilmIndexData.json  microfilmProjectState.json  microfilmReferenceSheets.json  microfilmReferenceSheets_details.json
.docs/: Auftragsüberwachung_ab_2016.xlsx  CHANGE_DOCUMENT_FILMING_SESSION_LOGS.md  Einlegehilfe.docx  nfc card template.docx  nfc card template2.docx  nfc card template3.docx  nfc-card-PVC-PETG-PLA-print-template-85_6x54mm-R-EN.docx  remote_execution.md  (+1 more)
saferoom/microesp/main/: CMakeLists.txt  config_storage.h  json_helper.c  main.c  network_manager.c  network_manager.h  relay_controller.c  relay_controller.h  websocket_server.c  websocket_server.h
(+1460 files in other folders)
